added akshay saini video notes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <p>JavaScript Interview Question</p>
 
-    <script src="./function/callback-function.js"></script>
+    <!-- <script src="./function/callback-function.js"></script> -->
+    <script src="./test.js"></script>
 </body>
 </html>
